--- a/assets/scss/base/_fonts.scss
+++ b/assets/scss/base/_fonts.scss
@@ -1,23 +1,24 @@
 @font-face {
   font-family: Montserrat;
   font-weight: 300;
-  src: url('~/assets/fonts/Montserrat/Montserrat-Light.ttf') format('truetype');
+  src: url("~/assets/fonts/Montserrat/Montserrat-Light.ttf") format("truetype");
 }
 
 @font-face {
   font-family: Montserrat;
   font-weight: 400;
-  src: url('~/assets/fonts/Montserrat/Montserrat-Regular.ttf') format('truetype');
+  src: url("~/assets/fonts/Montserrat/Montserrat-Regular.ttf")
+    format("truetype");
 }
 
 @font-face {
   font-family: Montserrat;
   font-weight: 800;
-  src: url('~/assets/fonts/Montserrat/Montserrat-Bold.ttf') format('truetype');
+  src: url("~/assets/fonts/Montserrat/Montserrat-Bold.ttf") format("truetype");
 }
 
 @font-face {
   font-family: Montserrat;
   font-weight: 500;
-  src: url('~/assets/fonts/Montserrat/Montserrat-Medium.ttf') format('truetype');
+  src: url("~/assets/fonts/Montserrat/Montserrat-Medium.ttf") format("truetype");
 }
