--- a/assets/scss/overrides/_tailwind.scss
+++ b/assets/scss/overrides/_tailwind.scss
@@ -4,7 +4,7 @@
 
 @layer base {
   html {
-    font-family: 'Montserrat', ui-sans-serif;
+    font-family: "Montserrat", ui-sans-serif;
     font-weight: 300;
   }
 }
