--- a/assets/scss/overrides/_tailwind.scss
+++ b/assets/scss/overrides/_tailwind.scss
@@ -6,5 +6,7 @@
   html {
     font-family: "Montserrat", ui-sans-serif;
     font-weight: 300;
+    @apply bg-white;
+    @apply text-black;
   }
 }
