--- a/assets/scss/app/_navbar.scss
+++ b/assets/scss/app/_navbar.scss
@@ -2,7 +2,7 @@
   @apply relative;
   &:after,
   &:before {
-    content: '';
+    content: "";
     position: absolute;
     height: 2px;
     width: 0;
@@ -36,7 +36,7 @@
     @apply text-sky-400;
     &:after,
     &:before {
-      content: '';
+      content: "";
       position: absolute;
       height: 2px;
       transform: translate(-50%);
