--- a/assets/scss/base/_fonts.scss
+++ b/assets/scss/base/_fonts.scss
@@ -20,7 +20,8 @@
 @font-face {
   font-family: Montserrat;
   font-weight: 600;
-  src: url("~/assets/fonts/Montserrat/Montserrat-SemiBold.ttf") format("truetype");
+  src: url("~/assets/fonts/Montserrat/Montserrat-SemiBold.ttf")
+    format("truetype");
 }
 
 @font-face {
