--- a/assets/scss/app/_navbar.scss
+++ b/assets/scss/app/_navbar.scss
@@ -22,7 +22,7 @@
 
   &:hover {
     background: transparent;
-    @apply text-sky-400;
+    @apply text-blue;
 
     &:before {
       width: 100%;
@@ -33,7 +33,7 @@
     }
   }
   &.is-active {
-    @apply text-sky-400;
+    @apply text-blue;
     &:after,
     &:before {
       content: "";
@@ -55,5 +55,12 @@
       bottom: -8px;
       @apply bg-blue;
     }
+  }
+}
+.navbar-button {
+  & .icons {
+    width: 100%;
+    height: 100%;
+    max-height: 2rem;
   }
 }
